# supplier-interface-exchange

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: suppliers.json
docs/: README.md  exchange_notes.md  project_plan.md
reports/: delivery-gates.csv  supplier-dashboard.html  supplier-register.csv  supplier-summary.md
src/supplier_interface_exchange/: __init__.py  analysis.py  cli.py  data.py  export.py
tests/: test_analysis.py
